--- a/content/blog/why-react-components-starts-with-uppercase.mdx
+++ b/content/blog/why-react-components-starts-with-uppercase.mdx
@@ -2,7 +2,7 @@
 title: Why React Components Start With Uppercase Letters
 description: ReactJS component names must begin with capital letters?
 author: Berkay Özay
-cover: https://reactjs.org/logo-og.png
+cover: https://d5gp1bgprhhde.cloudfront.net/wp-content/uploads/2023/01/react.png
 avatar: https://media.licdn.com/dms/image/D4D03AQHonrl5ZxdNIA/profile-displayphoto-shrink_800_800/0/1666359190922?e=1683158400&v=beta&t=SQy-MEz55Xl8q5w1G42qBYyyOf9oB_NuxBNa5HU-SfI
 date: "26 Feb 2023"
 category: Engineering
@@ -26,7 +26,7 @@ In JSX, React components are written in a format that resembles HTML markup, wit
 import React from "react";
 
 const button = () => {
-    return <button>Click Me</button>;
+  return <button>Click Me</button>;
 };
 
 export default button;
